2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Makefile.am): Add also $(top_srcdir) to
	AM_CPPFLAGS. Needed so that woe32dll/export.h is found while compiling
	gettextlib-exports.c in a VPATH build.
	Reported by Charles Wilson <cygwin@cwilson.fastmail.fm>.

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools/misc (Makefile.am): Use rm -f instead of
	$(RM).

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* lib/fstrcmp.c (keys_init_once): Remove semicolon after
	gl_once_define invocation.

2006-10-23  Bruno Haible  <bruno@clisp.org>

	Moved last change to gnulib.
	* lib/obstack.h.diff: Undo last change.
	* lib/obstack.c.diff: Remove file.
	* Makefile.am (EXTRA_DIST): Remove it.

2006-10-20  Bruno Haible  <bruno@clisp.org>

	* lib/obstack.h.diff: Use _obstack_free instead of obstack_free, but
	define _obstack_free to obstack_free by default.
	* lib/obstack.c.diff: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2006-10-17  Bruno Haible  <bruno@clisp.org>

	* lib/gettext.h (gettext, ngettext, pgettext, npgettext): Define
	differently if DEFAULT_TEXT_DOMAIN is set.

2006-10-16  Bruno Haible  <bruno@clisp.org>

	Use newer modules from gnulib.
	* lib/getline.h: Remove file.
	* lib/getline.c: Remove file.
	* m4/getline.m4: Remove file.
	* modules/getline: Remove file.
	* lib/getndelim2.h: Remove file.
	* lib/getndelim2.c: Remove file.
	* m4/getndelim2.m4: Remove file.
	* modules/getndelim2: Remove file.
	* Makefile.am (EXTRA_DIST): Remove them.

2006-10-13  Bruno Haible  <bruno@clisp.org>

	* modules/exitfail.diff: Update.
	* modules/quote.diff: Update.
	* modules/quotearg.diff: Update.

2006-10-12  Bruno Haible  <bruno@clisp.org>

	* modules/exitfail: Update.
	* modules/quote: Update.
	* modules/quotearg: Update.

2006-10-12  Bruno Haible  <bruno@clisp.org>

	* modules/canonicalize (Makefile.am): Distribute all files in lib/
	through EXTRA_DIST.