@@ -2,6 +2,12 @@
 
 	* gettext-0.16 released.
 
+2006-10-25  Bruno Haible  <bruno@clisp.org>
+
+	* lib/gettext.h (_LIBGETTEXT_HAVE_VARIABLE_SIZE_ARRAYS): Define to
+	false for PGI C++ and Sun C++ compilers.
+	Reported by Nelson H. F. Beebe <beebe@math.utah.edu>.
+
 2006-10-24  Bruno Haible  <bruno@clisp.org>
 
 	* modules/gettext-tools-misc (Makefile.am): Add also $(top_srcdir) to
